# papyrus

./: README.md  docker-compose.yml  example.env  papyrus.db  pyproject.toml  requirements.txt
src/library_catalog/: adapters.py  alembic.ini  db.py  dependencies.py  main.py  manage.py  models.py  schemas.py  typing.py  utils.py
src/library_catalog/api/: authors.py  books.py  openlibrary.py
src/library_catalog/app/: app.py  exceptions.py  schemas.py  typing.py
src/library_catalog/app/adapters/: adapters.py  base_api_client.py  openlibrary.py
src/library_catalog/app/api/: authors.py  books.py  main.py
src/library_catalog/app/dependencies/: authors.py  books.py
src/library_catalog/app/infra/config/: postgres.py  settings.py
src/library_catalog/app/infra/database/: db.py  models.py
src/library_catalog/app/infra/database/migrations/: env.py
src/library_catalog/app/infra/database/migrations/versions/: 25bd0fcc29e2_initial.py  402b28dba4a8_change_num_pages_to_integer.py
src/library_catalog/app/repositories/: authors.py  books.py  unit_of_work.py
src/library_catalog/app/services/: author_service.py  book_service.py
