[tool.ruff]
target-version = 'py312'

line-length = 120
extend-exclude = []
force-exclude = true

[tool.ruff.format]
skip-magic-trailing-comma = true

[tool.ruff.lint]
select = ['ALL']
ignore = ['RUF002', 'RET5030', 'D100', 'D102', 'D107']

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.pyright]
include = []

reportMissingImports = false
reportMissingModuleSource = false

[project]
name = "library_catalog"
version = "0"
description = ""
authors = [
    {name = "v.kirilenko",email = "v.kirilenko@mail.ru"}
]
packages = [
    { include = "library_catalog", from = "src" }
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "aiosqlite (==0.21.0)",
    "alembic (==1.16.4)",
    "annotated-types (==0.7.0)",
    "anyio (==4.9.0)",
    "asyncpg (==0.30.0)",
    "certifi (==2025.6.15)",
    "click (==8.2.1)",
    "exceptiongroup (==1.3.0)",
    "fastapi (==0.115.12)",
    "greenlet (==3.2.2)",
    "h11 (==0.16.0)",
    "httpcore (==1.0.9)",
    "httptools (==0.6.4)",
    "httpx (==0.28.1)",
    "idna (==3.10)",
    "mako (==1.3.10)",
    "markupsafe (==3.0.2)",
    "pydantic (==2.11.5)",
    "pydantic-settings (==2.10.1)",
    "pydantic-core (==2.33.2)",
    "python-dotenv (==1.1.0)",
    "pyyaml (==6.0.2)",
    "sniffio (==1.3.1)",
    "sqlalchemy (==2.0.41)",
    "starlette (==0.46.2)",
    "typing-inspection (==0.4.1)",
    "typing-extensions (==4.13.2)",
    "uvicorn (==0.34.2)",
    "uvloop (==0.21.0)",
    "watchfiles (==1.0.5)",
    "websockets (==15.0.1)",
    "loguru (==0.7.3)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
